# MyPetProject

./: README.md  TODO  diagram.drawio  docker-compose.yml.example  pyproject.toml
bots/kowka/bot/data/: bot_cfg.py  redis_connection.py
bots/kowka/bot/handlers/: admins.py  custom.py  setter_handlers.py
bots/kowka/bot/scheduler/: apsched.py
bots/kowka/bot/utils/: bot_commands.py
bots/pollbot/: Dockerfile  main.py
bots/pollbot/bot/data/: bot_cfg.py
bots/pollbot/bot/handlers/: start.py
bots/sarbot/bot/data/: texts.py
bots/sarbot/bot/handlers/: default.py
bots/sarbot/bot/middlewares/: set_middlewares.py
bots/userbot/bot/config/: global_configs.py  my_logger.py
bots/userbot/bot/data/: smiles.py
bots/userbot/bot/handlers/: exception_handler.py  otz_handler.py
bots/userbot/bot/middlewares/: product_type_middleware.py
database/sql/config/: db_config.py
database/sql/models/: base_model.py  models.py  order_models.py  otz_donation_models.py  poll_models.py  product_models.py  user_models.py
database/sql/requests/async/: async_req.py
database/sql/requests/sync/: sync_req.py
logs/: my_logger.py
src/: api_main.py
src/bots/course/: main.py
src/bots/pollbot/: main.py
src/bots/sarbot/: main.py
src/database/api/: routers.py
src/database/api/chat/: chat_models.py  chat_routers.py  chat_schemas.py
src/database/api/config/: api_config.py  dependencies.py
src/database/api/repositories/: repos.py  user_repos.py
src/database/api/requests/: products_crud.py  user_crud.py  users_crud.py
src/database/api/routers/: user_routers.py
src/database/api/schemas/: cross_schemas.py  product_schemas.py  user_schemas.py
src/database/api/services/: cross_services.py  (+3 more)
src/database/sql/: docker-compose.yml
src/logs/: my_ice.py  my_logger.py
src/templates/: base.html
tests/: conftests.py  runner.py  test_models.py  user_tests.py
(+49 files in other folders)
