[tool.poetry]
name = "fbotfactory"
version = "0.1.0"
description = ""
authors = ["ilia_volodin <vollodin61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
apscheduler = "^3.10.4"
aio-scheduler = "^0.1.0"
alembic = "^1.13.1"
apscheduler-di = "^0.1.0"
black = "^24.4.0"
emoji = "^2.11.0"
environs = "^11.0.0"
fastapi = "^0.110.1"
redis = "^5.0.3"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.29"
pyrogram = "^2.0.106"
pydantic-settings = "^2.2.1"
loguru = "^0.7.2"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



